k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: miniserve-service
  namespace: default
  labels:
    app: miniserve
spec:
  type: NodePort
  ports:
  - port: 8080
    targetPort: 8080
    nodePort: 30080
    protocol: TCP
    name: http
  selector:
    app: miniserve
---
apiVersion: v1
kind: Service
metadata:
  name: miniserve-clusterip
  namespace: default
  labels:
    app: miniserve
spec:
  type: ClusterIP
  ports:
  - port: 80
    targetPort: 8080
    protocol: TCP
    name: http
  selector:
    app: miniserve
